<resources>
    <string name="app_name">EasyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="drawer_open">navigation_drawerLayout</string>
    <string name="drawer_close">navigation_drawer close</string>
    <string name="vip">VIP</string>
    <string name="all">ALL</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="add_note">Add note</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="share">Share</string>
    <string name="more_options">More options</string>
    <string name="_21_03_10_39_am">21/03, 10:39 am</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="note_here">Note here</string>
    <string name="checkbox">Checkbox</string>
    <string name="voice">Voice</string>
    <string name="attach">Attach</string>
    <string name="image">Image</string>
    <string name="emoji">Emoji</string>
    <string name="paint">Paint</string>
    <string name="bullet_list">Bullet List</string>
    <string name="numbered_list">Numbered List</string>
    <string name="aa">Aa</string>
    <string name="title">Title</string>
    <string name="tap_to_create_note">tap_to_create_note</string>
    <string name="no_notes_yet">no_notes_yet\n</string>
    <string name="empty_notes">empty_notes</string>
    <string name="duplicate">Duplicate</string>
    <string name="add_widget">Add widget</string>
    <string name="move">Move</string>
    <string name="share2">Share</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin</string>
    <string name="add_lock">Add lock</string>
    <string name="salmon">#FFF9A8A8</string>
    <string name="tab_name">Tab Name</string>
    <string name="rename">Rename</string>
    <string name="remove">Delete</string>
    <string name="empty_notes_illustration">Home_illustration</string>
    <string name="add_new_note">home_add_new_tab</string>
    <string name="next_month">Next month</string>
    <string name="sunday">SUN</string>
    <string name="no_notes_for_this_date">No notes for this date</string>
</resources>