<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_pin"
        android:title="@string/pin" />

    <item
        android:id="@+id/action_add_lock"
        android:icon="@drawable/ic_lock"
        android:title="@string/add_lock" />

    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_duplicate"
        android:title="@string/duplicate" />

    <item
        android:id="@+id/action_add_widget"
        android:icon="@drawable/ic_widget"
        android:title="@string/add_widget" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_move"
        android:title="@string/move" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share2" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete" />
</menu>